<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OloProject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lblNombre">Nombre: </string>
    <string name="lblFicha">Ficha: </string>
    <string name="lblDestino">Destino: </string>
    <string name="lblFecha">Fecha: </string>
    <string name="lblHoraInicio">Hora de Inicio: </string>
    <string name="lblDia">Dia: </string>
    <string name="lblMes">Mes: </string>
    <string name="lblAnio">Año: </string>
    <string name="lblExpediente">Expediente: </string>
    <string name="lblDespacho">Despacho: </string>
    <string name="lblNumeroTarima">Numero de Tarima: </string>
    <string name="lblTarimaOrigen">Tarima de Origen: </string>
    <string name="lblReferencia">Referencia: </string>
    <string name="lblBultos">Bultos: </string>
    <string name="lblEmpaque">Empaque: </string>
    <string name="lblPeso">Peso(Kg): </string>
    <string name="lblPesoTotal">Peso Total(Kg): </string>
    <string name="lblUnidadesTotales">Unidades Totales: </string>
    <string name="lblListaReferencias">Lista de Referencias: </string>
    <string name="txtPesoTotal">0</string>
    <string name="txtUnidadesTotales">0</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnNTarima">Nueva Tarima</string>
    <string name="btnLTarima">Lista de Tarimas</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEditarTarima">Editar Tarima</string>
    <string name="btnEliminarTarima">Eliminar Tarima</string>
    <string name="btnAgregarReferencia"> Agregar Referencia</string>
    <string name="btnDesecharReferencia">Desechar Referencia</string>
    <string name="btnGuardarTarima">Guardar Tarima</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>
    <string name="btnDesecharTarima">Desechar Tarima</string>
    <string name="btnRegresar">Regresar</string>
    <string name="hoja_despacho">Nueva hoja de despacho</string>
    <string name="title_activity_hoja_despacho">HojaDespacho</string>
    <string name="title_activity_nueva_tarima">NuevaTarima</string>
    <string name="title_activity_nueva_referencia">NuevaReferencia</string>
    <string name="title_activity_editar_referencia">EditarReferencia</string>
    <string name="title_activity_editar_tarima">EditarTarima</string>
    <string name="title_activity_lista_tarima">ListaTarima</string>

</resources>
