<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblRTarima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNumeroTarima" />

    <EditText
        android:id="@+id/txtETarimaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" 
        android:focusable="false"/>
    <TextView
        android:id="@+id/lblTarimaOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTarimaOrigen" />

    <EditText
        android:id="@+id/txtETarimaOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10" />

    <TextView
        android:id="@+id/lblTExpediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblExpediente" />

    <EditText
        android:id="@+id/txtETExpediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />


    <TextView
        android:id="@+id/lblListaRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblListaReferencias" />

    <ListView
        android:id="@+id/lvEReferencias"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
    </ListView>

    <Button
        android:id="@+id/btnEGuardarTam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarCambios" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar" />

</LinearLayout>