<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblReferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lblReferencia" />

        <EditText
            android:id="@+id/txtReferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >
        </EditText>

        <TextView
            android:id="@+id/lblEBultos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBultos"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/txtBultos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/lblEmpaque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmpaque"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/txtEmpaque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/lblEUnidadesTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblUnidadesTotales"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtUnidadesTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtUnidadesTotales"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/LblEPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPeso" 
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/lblEPesoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPesoTotal"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/txtPesoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPesoTotal"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnERAgregarReferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnAgregarReferencia"
            style="@style/btnStyleSeagull" />

        <Button
            android:id="@+id/btnEDesecharRef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnCancelar" 
            style="@style/btnStyleSeagull"/>

        <Button
            android:id="@+id/btnPrueba2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:visibility="invisible"  />
    </LinearLayout>

</ScrollView>
